<resources>
    <string name="app_name">stock</string>
    <string name="placeholder">textView</string>
    <string name="portfolio_title">PORTFOLIO</string>
    <string name="favorites_title">FAVORITES</string>
    <string name="net_worth">Net Worth</string>
    <string name="cash_balance">Cash Balance</string>
    <string name="attribution">Powered By Finnhub</string>
    <string name="search">Search</string>
    <string name="favorite">Switch</string>
    <string name="detail_scrollable_content_description">Scrollable container for the details of a stock</string>
    <string name="detail_button">Button to open the detail page for the stock</string>
    <string name="trend_icon">The icon that indicates the trend of the stock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_chart_tabs">tabs that switches between different charts</string>
    <string name="detail_portfolio_title">Portfolio</string>
    <string name="trade_button">TRADE</string>
    <string name="detail_share">Shares Owned :</string>
    <string name="detailAverage">Avg. Cost / Share:</string>
    <string name="detailCost">Total Cost :</string>
    <string name="detailChange">Change :</string>
    <string name="detailMarket">Market Value :</string>
    <string name="detail_stats_title">Stats</string>
    <string name="detail_stats_open">Open Price :</string>
    <string name="detail_stats_high">High Price :</string>
    <string name="detail_stats_low">Low Price :</string>
    <string name="detail_stats_prev">Prev. Close :</string>
    <string name="detail_about_title">About</string>
    <string name="detail_about_start">IPO Start Date</string>
    <string name="detail_about_industry">Industry</string>
    <string name="detail_about_webpage">Webpage</string>
    <string name="detail_about_peer">Company Peers</string>
    <string name="detail_insights_title">Insights</string>
    <string name="detail_insights_table_title">Social Sentiments</string>
    <string name="detail_insights_mspr">MSPR</string>
    <string name="detail_insights_change">Change</string>
    <string name="detail_insights_total">Total</string>
    <string name="detail_insights_positive">Positive</string>
    <string name="detail_insights_negative">Negative</string>
    <string name="detail_news_title">News</string>
    <string name="detail_news_first_thumbnail">The thumbnail of the first news entry</string>
    <string name="shares">shares</string>
    <string name="trade_input">shares of stock to buy/sell</string>
    <string name="initial_value">0</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="congratulations">Congratulations!</string>
    <string name="done">Done</string>
    <string name="open_in_explorer">open in explorer</string>
    <string name="share_on_twitter">share on twitter</string>
    <string name="share_on_facebook">share on facebook</string>
</resources>