<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_details">

    <TextView
        android:id="@+id/portfolioSectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/detailSectionTitleStyle"
        android:text="@string/detail_portfolio_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/detailPortfolioShareTitle"
                    style="@style/detailSectionContentTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_share" />

                <TextView
                    android:id="@+id/detailPortfolioShare"
                    style="@style/detailSectionContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/detailPortfolioAverageTitle"
                    style="@style/detailSectionContentTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailAverage" />

                <TextView
                    android:id="@+id/detailPortfolioAverage"
                    style="@style/detailSectionContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/detailPortfolioCostTitle"
                    style="@style/detailSectionContentTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailCost" />

                <TextView
                    android:id="@+id/detailPortfolioCost"
                    style="@style/detailSectionContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/detailPortfolioChangeTitle"
                    style="@style/detailSectionContentTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailChange" />

                <TextView
                    android:id="@+id/detailPortfolioChange"
                    style="@style/detailSectionContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/detailPortfolioMarketTitle"
                    style="@style/detailSectionContentTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailMarket" />

                <TextView
                    android:id="@+id/detailPortfolioMarket"
                    style="@style/detailSectionContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/detailPortfolioTrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_trade"
                android:text="@string/trade_button"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</merge>