<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_details">

    <TextView
        android:id="@+id/aboutSectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/detailSectionTitleStyle"
        android:text="@string/detail_about_title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detailAboutIPOTitle"
                style="@style/detailSectionContentTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_about_start" />

            <TextView
                android:id="@+id/detailAboutIPO"
                style="@style/detailSectionContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/placeholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detailAboutIndustryTitle"
                style="@style/detailSectionContentTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_about_industry" />

            <TextView
                android:id="@+id/detailAboutIndustry"
                style="@style/detailSectionContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/placeholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detailAboutWebpageTitle"
                style="@style/detailSectionContentTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_about_webpage" />

            <TextView
                android:id="@+id/detailAboutWebpage"
                style="@style/detailSectionContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/placeholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detailAboutPeersTitle"
                style="@style/detailSectionContentTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_about_peer" />

            <HorizontalScrollView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detailAboutPeers"
                        style="@style/detailSectionContentStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:text="@string/placeholder" />
                </LinearLayout>
            </HorizontalScrollView>

        </TableRow>
    </TableLayout>
</merge>