<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"> <!-- Customize this with rounded corner drawable -->

        <LinearLayout
            android:id="@+id/tradeDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_normal"
            android:orientation="vertical"
            android:padding="20dp">

                <TextView
                    android:id="@+id/tradeDialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="60dp"
                    android:gravity="center_horizontal"
                    android:text="@string/placeholder"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                        <EditText
                            android:id="@+id/tradeDialogInput"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="shares"
                            android:hint="@string/trade_input"
                            android:inputType="text"
                            android:text="@string/initial_value" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:text="@string/shares"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tradeDialogCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/placeholder"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tradeDialogBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/placeholder"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                        <Button
                            android:id="@+id/tradeDialogBuy"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_trade"
                            android:text="@string/buy"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/tradeDialogSell"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_trade"
                            android:text="@string/sell"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/successDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_success"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

                <TextView
                    android:id="@+id/successTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:text="@string/congratulations"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/successMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="20dp"
                    android:text="@string/placeholder"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/successReturn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/button_success"
                    android:text="@string/done" />
        </LinearLayout>

</LinearLayout>
